vtc_perpignan.html

--- a/vtc_perpignan.html
+++ b/vtc_perpignan.html
@@ -7,8 +7,162 @@
   <meta name="description" content="OuassVTC, votre service de VTC à Perpignan. Chauffeur privé disponible 7j/7 pour vos transferts gare, aéroport, déplacements professionnels ou trajets vers l’Espagne. Réservez facilement en ligne.">
   <link rel="canonical" href="https://www.ouassvtc.fr/vtc-perpignan.html" />
   <meta name="robots" content="index,follow" />
+
+  <style>
+    :root{
+      --brand:#000;
+      --border:#e5e7eb;
+      --bg:#f9f9f9;
+      --accent:#ffd33b;
+    }
+    *{box-sizing:border-box;margin:0;padding:0}
+    body {
+      font-family: Arial, sans-serif;
+      background-color: var(--bg);
+      color:#333;
+      line-height:1.6;
+    }
+    header {
+      background:var(--brand);
+      color:#fff;
+      text-align:center;
+      padding:28px 16px;
+    }
+    header h1 {
+      font-size:1.9rem;
+      margin-bottom:8px;
+    }
+    header p {
+      max-width:650px;
+      margin:0 auto 18px;
+    }
+    header a.cta {
+      background:var(--accent);
+      color:#000;
+      padding:10px 18px;
+      font-weight:700;
+      border-radius:999px;
+      text-decoration:none;
+      transition:.2s;
+    }
+    header a.cta:hover{opacity:0.9;}
+
+    main {
+      max-width:900px;
+      margin:0 auto;
+      padding:24px 16px 80px;
+      background:#fff;
+    }
+    h2 {
+      font-size:1.3rem;
+      color:#000;
+      margin-top:28px;
+      margin-bottom:10px;
+    }
+    h3 {
+      margin-top:16px;
+      font-size:1.1rem;
+      color:#000;
+    }
+    p {margin-bottom:12px;}
+    ul {margin:10px 0 20px 20px;}
+    li {margin-bottom:6px;}
+    a {color:var(--brand);text-decoration:none;font-weight:600;}
+    a:hover{text-decoration:underline;}
+
+    footer {
+      background:var(--brand);
+      color:#fff;
+      text-align:center;
+      padding:22px 12px;
+      font-size:13px;
+    }
+
+    .floating-buttons {
+      position:fixed;
+      bottom:15px;
+      left:0;
+      width:100%;
+      display:flex;
+      justify-content:center;
+      gap:10px;
+      padding:10px;
+      z-index:999;
+    }
+    .floating-buttons a {
+      background:var(--brand);
+      color:#fff;
+      font-weight:700;
+      padding:12px 18px;
+      border-radius:999px;
+      text-decoration:none;
+      box-shadow:0 4px 10px rgba(0,0,0,0.2);
+      transition:.2s;
+    }
+    .floating-buttons a:hover{transform:translateY(-2px);opacity:.9;}
+  </style>
 </head>
+
 <body>
-<p>Contenu de la page VTC Perpignan (version HTML optimisée).</p>
+  <header>
+    <h1>VTC Perpignan – Chauffeur privé OuassVTC</h1>
+    <p>Besoin d’un <strong>VTC à Perpignan</strong> ? OuassVTC vous propose un service de chauffeur privé fiable, ponctuel et disponible 7j/7 pour tous vos trajets dans les Pyrénées-Orientales.</p>
+    <a href="tel:+33644120784" class="cta">📞 Réserver au 06 44 12 07 84</a>
+  </header>
+
+  <main>
+    <section>
+      <h2>VTC Perpignan : votre chauffeur privé disponible 7j/7</h2>
+      <p>Avec <strong>OuassVTC</strong>, profitez d’un service <strong>VTC à Perpignan</strong> simple, sérieux et rapide. Nous assurons vos déplacements à la demande, de jour comme de nuit, dans tout le département 66 et au-delà. Que vous partiez de Perpignan centre, Canet-en-Roussillon ou Argelès-sur-Mer, votre chauffeur vient vous chercher à l’heure convenue.</p>
+    </section>
+
+    <section>
+      <h2>Nos services de VTC à Perpignan</h2>
+      <h3>Transferts gare SNCF de Perpignan</h3>
+      <p>Votre chauffeur VTC vous attend à la gare de Perpignan, aide aux bagages et trajet confortable vers votre destination. Réservation à l’avance ou immédiate selon disponibilité.</p>
+
+      <h3>Transferts aéroports</h3>
+      <p>Déplacements vers ou depuis les aéroports de Perpignan-Rivesaltes, Béziers, Gérone et Barcelone. Idéal pour vos voyages d’affaires ou vacances, sans stress ni attente.</p>
+
+      <h3>Déplacements professionnels</h3>
+      <p>Besoin d’un <strong>chauffeur VTC à Perpignan</strong> pour vos rendez-vous, séminaires ou visites clients ? Nous assurons vos trajets avec ponctualité et confort, pour une image soignée et professionnelle.</p>
+
+      <h3>Sorties et événements</h3>
+      <p>Profitez sereinement de vos sorties à Perpignan, concerts ou mariages : votre chauffeur VTC vous conduit et vous ramène en toute sécurité.</p>
+    </section>
+
+    <section>
+      <h2>Pourquoi choisir OuassVTC à Perpignan</h2>
+      <ul>
+        <li>🚗 Service de <strong>VTC à Perpignan</strong> et alentours</li>
+        <li>📅 Disponible 24h/24 et 7j/7</li>
+        <li>💬 Réservation simple par téléphone ou WhatsApp</li>
+        <li>🕐 Chauffeurs ponctuels et discrets</li>
+        <li>💶 Prix clairs et fixés à la réservation</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Zones desservies par nos VTC</h2>
+      <p>Nos chauffeurs interviennent dans tout le secteur de <strong>Perpignan</strong> : Canet-en-Roussillon, Saint-Estève, Toulouges, Le Barcarès, Argelès-sur-Mer, Cabestany, Saleilles, Bompas et plus largement dans les Pyrénées-Orientales.</p>
+      <p>Nous réalisons aussi des trajets longue distance vers <strong>Narbonne, Carcassonne, Gérone, Barcelone</strong> et d’autres destinations sur demande.</p>
+    </section>
+
+    <section>
+      <h2>Réserver votre VTC à Perpignan</h2>
+      <p>Contactez OuassVTC par téléphone, WhatsApp ou via le formulaire en ligne. Indiquez simplement votre lieu de départ, la destination et l’horaire souhaité.</p>
+      <p><a href="tel:+33644120784">📞 06 44 12 07 84</a><br>
+      <a href="https://wa.me/33644120784" target="_blank" rel="noopener">💬 WhatsApp</a><br>
+      <a href="https://www.ouassvtc.fr/contact.html">📩 Formulaire de contact</a></p>
+    </section>
+  </main>
+
+  <div class="floating-buttons">
+    <a href="index.html">🏠 Accueil</a>
+    <a href="tel:+33644120784">📞 Appeler</a>
+    <a href="contact.html">📅 Réserver</a>
+  </div>
+
+  <footer>© 2025 OuassVTC – VTC Perpignan et Pyrénées-Orientales.</footer>
 </body>
 </html>
