--- a/vtc-perpignan.html
+++ b/vtc-perpignan.html
@@ -2,167 +2,264 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>VTC Perpignan | Chauffeur privé OuassVTC – Réservation 24h/24</title>
-  <meta name="description" content="OuassVTC, votre service de VTC à Perpignan. Chauffeur privé disponible 7j/7 pour vos transferts gare, aéroport, déplacements professionnels ou trajets vers l’Espagne. Réservez facilement en ligne.">
-  <link rel="canonical" href="https://www.ouassvtc.fr/vtc-perpignan.html" />
-  <meta name="robots" content="index,follow" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>VTC Perpignan - Chauffeur privé | OuassVTC</title>
+  <meta name="description" content="OuassVTC, votre chauffeur VTC à Perpignan. Transferts gares et aéroports, trajets locaux ou longue distance, déplacements professionnels et vers l’Espagne. Réservation 24h/24 au 06 44 12 07 84.">
+  <meta name="keywords" content="VTC Perpignan, chauffeur VTC Perpignan, chauffeur privé Perpignan, taxi Perpignan, transfert aéroport Perpignan, gare Perpignan, VTC 66, OuassVTC">
+
+  <!-- Données structurées SEO -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LocalBusiness",
+    "name": "OuassVTC",
+    "image": "https://www.ouassvtc.fr/ouassvtc.png",
+    "url": "https://www.ouassvtc.fr/vtc-perpignan.html",
+    "telephone": "+33644120784",
+    "email": "contact@ouassvtc.fr",
+    "description": "Service de VTC à Perpignan pour trajets locaux, longues distances et transferts gares / aéroports.",
+    "priceRange": "€€",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Perpignan",
+      "postalCode": "66000",
+      "addressCountry": "FR"
+    },
+    "areaServed": [
+      "Perpignan",
+      "Canet-en-Roussillon",
+      "Saint-Estève",
+      "Argelès-sur-Mer",
+      "Le Barcarès",
+      "Toulouges"
+    ]
+  }
+  </script>
 
   <style>
-    :root{
-      --brand:#000;
-      --border:#e5e7eb;
-      --bg:#f9f9f9;
-      --accent:#ffd33b;
+    :root {
+      --brand: #000;
+      --border: #e5e7eb;
+      --bg: #f5f5f5;
     }
-    *{box-sizing:border-box;margin:0;padding:0}
+    * { box-sizing: border-box; margin: 0; padding: 0; }
     body {
       font-family: Arial, sans-serif;
       background-color: var(--bg);
-      color:#333;
-      line-height:1.6;
+      color: #333;
+      margin: 0;
+      line-height: 1.6;
+      padding-bottom: 90px; /* espace pour les boutons fixes */
     }
     header {
-      background:var(--brand);
-      color:#fff;
-      text-align:center;
-      padding:28px 16px;
+      background: var(--brand);
+      color: #fff;
+      text-align: center;
+      padding: 24px 16px;
     }
-    header h1 {
-      font-size:1.9rem;
-      margin-bottom:8px;
+    header img {
+      max-height: 90px;
+      height: auto;
     }
-    header p {
-      max-width:650px;
-      margin:0 auto 18px;
-    }
-    header a.cta {
-      background:var(--accent);
-      color:#000;
-      padding:10px 18px;
-      font-weight:700;
-      border-radius:999px;
-      text-decoration:none;
-      transition:.2s;
-    }
-    header a.cta:hover{opacity:0.9;}
-
     main {
-      max-width:900px;
-      margin:0 auto;
-      padding:24px 16px 80px;
-      background:#fff;
+      max-width: 850px;
+      margin: 28px auto;
+      background: #fff;
+      border-radius: 16px;
+      box-shadow: 0 4px 16px rgba(0,0,0,.08);
+      padding: 28px 20px 60px;
+    }
+    h1, h2 { color: #000; }
+    h1 {
+      text-align: center;
+      font-size: 1.8rem;
+      margin-bottom: 16px;
     }
     h2 {
-      font-size:1.3rem;
-      color:#000;
-      margin-top:28px;
-      margin-bottom:10px;
+      font-size: 1.2rem;
+      margin-top: 26px;
+      margin-bottom: 8px;
     }
-    h3 {
-      margin-top:16px;
-      font-size:1.1rem;
-      color:#000;
+    p { margin-bottom: 10px; }
+    a {
+      color: #000;
+      font-weight: 600;
+      text-decoration: none;
     }
-    p {margin-bottom:12px;}
-    ul {margin:10px 0 20px 20px;}
-    li {margin-bottom:6px;}
-    a {color:var(--brand);text-decoration:none;font-weight:600;}
-    a:hover{text-decoration:underline;}
-
+    a:hover { text-decoration: underline; }
+    ul {
+      margin-left: 22px;
+      color: #555;
+      margin-bottom: 10px;
+    }
     footer {
-      background:var(--brand);
-      color:#fff;
-      text-align:center;
-      padding:22px 12px;
-      font-size:13px;
+      font-size: 13px;
+      text-align: center;
+      padding: 18px 12px 28px;
+      background: #000;
+      color: #fff;
     }
 
+    /* === Boutons fixes === */
     .floating-buttons {
-      position:fixed;
-      bottom:15px;
-      left:0;
-      width:100%;
-      display:flex;
-      justify-content:center;
-      gap:10px;
-      padding:10px;
-      z-index:999;
+      position: fixed;
+      bottom: 15px;
+      left: 0;
+      width: 100%;
+      display: flex;
+      justify-content: space-around;
+      gap: 10px;
+      padding: 8px 10px;
+      z-index: 999;
     }
     .floating-buttons a {
-      background:var(--brand);
-      color:#fff;
-      font-weight:700;
-      padding:12px 18px;
-      border-radius:999px;
-      text-decoration:none;
-      box-shadow:0 4px 10px rgba(0,0,0,0.2);
-      transition:.2s;
+      flex: 1;
+      text-align: center;
+      background: var(--brand);
+      color: #fff;
+      font-weight: 700;
+      border-radius: 999px;
+      padding: 14px 10px;
+      text-decoration: none;
+      font-size: 15px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.25);
+      transition: transform .2s, opacity .2s;
     }
-    .floating-buttons a:hover{transform:translateY(-2px);opacity:.9;}
+    .floating-buttons a:hover {
+      transform: translateY(-2px);
+      opacity: 0.9;
+    }
+
+    @media (max-width:600px){
+      .floating-buttons a {
+        font-size: 14px;
+        padding: 12px 8px;
+      }
+    }
   </style>
 </head>
 
 <body>
+
   <header>
-    <h1>VTC Perpignan – Chauffeur privé OuassVTC</h1>
-    <p>Besoin d’un <strong>VTC à Perpignan</strong> ? OuassVTC vous propose un service de chauffeur privé fiable, ponctuel et disponible 7j/7 pour tous vos trajets dans les Pyrénées-Orientales.</p>
-    <a href="tel:+33644120784" class="cta">📞 Réserver au 06 44 12 07 84</a>
+    <img src="ouassvtc.png" alt="OuassVTC - Chauffeur VTC à Perpignan">
   </header>
 
   <main>
-    <section>
-      <h2>VTC Perpignan : votre chauffeur privé disponible 7j/7</h2>
-      <p>Avec <strong>OuassVTC</strong>, profitez d’un service <strong>VTC à Perpignan</strong> simple, sérieux et rapide. Nous assurons vos déplacements à la demande, de jour comme de nuit, dans tout le département 66 et au-delà. Que vous partiez de Perpignan centre, Canet-en-Roussillon ou Argelès-sur-Mer, votre chauffeur vient vous chercher à l’heure convenue.</p>
-    </section>
+    <h1>VTC Perpignan – Chauffeur privé OuassVTC</h1>
 
-    <section>
-      <h2>Nos services de VTC à Perpignan</h2>
-      <h3>Transferts gare SNCF de Perpignan</h3>
-      <p>Votre chauffeur VTC vous attend à la gare de Perpignan, aide aux bagages et trajet confortable vers votre destination. Réservation à l’avance ou immédiate selon disponibilité.</p>
+    <p>
+      <strong>OuassVTC</strong> est votre service de <strong>VTC à Perpignan</strong> pour tous vos déplacements :
+      trajets du quotidien, transferts gares et aéroports, rendez-vous professionnels ou trajets vers l’Espagne.
+    </p>
+    <p>
+      Basé à <strong>Perpignan (66)</strong>, votre chauffeur se tient à votre disposition
+      <strong>24h/24 et 7j/7</strong>, sur réservation, avec un tarif fixe annoncé à l’avance.
+      Pas de compteur, pas de surprise : vous connaissez le prix avant de monter à bord.
+    </p>
 
-      <h3>Transferts aéroports</h3>
-      <p>Déplacements vers ou depuis les aéroports de Perpignan-Rivesaltes, Béziers, Gérone et Barcelone. Idéal pour vos voyages d’affaires ou vacances, sans stress ni attente.</p>
+    <h2>🚖 Pourquoi choisir un VTC à Perpignan ?</h2>
+    <p>
+      Un <strong>VTC à Perpignan</strong>, c’est la garantie d’un chauffeur ponctuel,
+      d’un véhicule propre et d’un trajet organisé à l’avance. Idéal pour :
+    </p>
+    <ul>
+      <li>Vos sorties en ville ou en bord de mer</li>
+      <li>Vos trajets tôt le matin ou tard le soir</li>
+      <li>Être sûr d’avoir un chauffeur à l’heure convenue</li>
+    </ul>
 
-      <h3>Déplacements professionnels</h3>
-      <p>Besoin d’un <strong>chauffeur VTC à Perpignan</strong> pour vos rendez-vous, séminaires ou visites clients ? Nous assurons vos trajets avec ponctualité et confort, pour une image soignée et professionnelle.</p>
+    <h2>🛫 Transferts gares et aéroports depuis Perpignan</h2>
+    <p>
+      OuassVTC assure vos transferts au départ ou à destination de <strong>Perpignan</strong> vers :
+      <strong>gare de Perpignan</strong>, <strong>aéroport Perpignan-Rivesaltes</strong>,
+      mais aussi les aéroports de <strong>Béziers</strong>, <strong>Gérone</strong>,
+      <strong>Barcelone</strong>, <strong>Toulouse</strong> ou <strong>Montpellier</strong>.
+    </p>
+    <p>
+      Votre chauffeur suit les horaires de votre vol ou train et s’adapte en cas de retard.
+      Vous êtes attendu à l’heure, avec un accueil personnalisé.
+    </p>
 
-      <h3>Sorties et événements</h3>
-      <p>Profitez sereinement de vos sorties à Perpignan, concerts ou mariages : votre chauffeur VTC vous conduit et vous ramène en toute sécurité.</p>
-    </section>
+    <h2>📍 Trajets locaux autour de Perpignan</h2>
+    <p>
+      Besoin d’un <strong>VTC Perpignan</strong> pour un trajet court ?
+      Nous desservons les communes de :
+      <strong>Canet-en-Roussillon</strong>, <strong>Saint-Estève</strong>,
+      <strong>Argelès-sur-Mer</strong>, <strong>Le Barcarès</strong>, <strong>Toulouges</strong>,
+      et l’ensemble des Pyrénées-Orientales.
+    </p>
+    <p>
+      Que ce soit pour un rendez-vous médical, une soirée, un restaurant ou une visite chez des proches,
+      vous profitez d’un trajet confortable et sans stress.
+    </p>
 
-    <section>
-      <h2>Pourquoi choisir OuassVTC à Perpignan</h2>
-      <ul>
-        <li>🚗 Service de <strong>VTC à Perpignan</strong> et alentours</li>
-        <li>📅 Disponible 24h/24 et 7j/7</li>
-        <li>💬 Réservation simple par téléphone ou WhatsApp</li>
-        <li>🕐 Chauffeurs ponctuels et discrets</li>
-        <li>💶 Prix clairs et fixés à la réservation</li>
-      </ul>
-    </section>
+    <h2>🌍 Trajets longue distance et Espagne</h2>
+    <p>
+      OuassVTC réalise également des trajets longue distance au départ de Perpignan :
+      <strong>Barcelone</strong>, <strong>Gérone</strong>, <strong>Montpellier</strong>,
+      <strong>Narbonne</strong>, <strong>Carcassonne</strong>, etc.
+    </p>
+    <p>
+      Idéal pour rejoindre un aéroport, un hôtel, un port de croisière ou une destination de vacances.
+      Le prix est défini à l’avance en fonction du trajet.
+    </p>
 
-    <section>
-      <h2>Zones desservies par nos VTC</h2>
-      <p>Nos chauffeurs interviennent dans tout le secteur de <strong>Perpignan</strong> : Canet-en-Roussillon, Saint-Estève, Toulouges, Le Barcarès, Argelès-sur-Mer, Cabestany, Saleilles, Bompas et plus largement dans les Pyrénées-Orientales.</p>
-      <p>Nous réalisons aussi des trajets longue distance vers <strong>Narbonne, Carcassonne, Gérone, Barcelone</strong> et d’autres destinations sur demande.</p>
-    </section>
+    <h2>💼 Déplacements professionnels à Perpignan</h2>
+    <p>
+      Pour vos rendez-vous, séminaires, visites clients ou réunions,
+      <strong>OuassVTC</strong> propose un service adapté aux entreprises et professionnels :
+    </p>
+    <ul>
+      <li>Prise en charge à l’adresse de votre choix</li>
+      <li>Trajet direct, sans détour inutile</li>
+      <li>Discrétion et ponctualité</li>
+    </ul>
+    <p>
+      Nous pouvons également prendre en charge vos clients ou partenaires à la gare ou à l’aéroport.
+    </p>
 
-    <section>
-      <h2>Réserver votre VTC à Perpignan</h2>
-      <p>Contactez OuassVTC par téléphone, WhatsApp ou via le formulaire en ligne. Indiquez simplement votre lieu de départ, la destination et l’horaire souhaité.</p>
-      <p><a href="tel:+33644120784">📞 06 44 12 07 84</a><br>
-      <a href="https://wa.me/33644120784" target="_blank" rel="noopener">💬 WhatsApp</a><br>
-      <a href="https://www.ouassvtc.fr/contact.html">📩 Formulaire de contact</a></p>
-    </section>
+    <h2>💳 Tarifs et paiement VTC Perpignan</h2>
+    <p>
+      Les tarifs dépendent de la distance, du trajet et de l’horaire, mais sont toujours annoncés
+      avant la validation de la course. Aucune mauvaise surprise à l’arrivée.
+    </p>
+    <ul>
+      <li>💳 Carte bancaire à bord</li>
+      <li>🔗 Lien de paiement sécurisé (CB à distance)</li>
+      <li>💶 Espèces acceptées</li>
+    </ul>
+
+    <h2>📞 Réserver votre VTC à Perpignan</h2>
+    <p>
+      Pour réserver votre <strong>VTC à Perpignan</strong>, il vous suffit de nous contacter :
+    </p>
+    <ul>
+      <li>📱 <strong>Téléphone :</strong> <a href="tel:0644120784">06 44 12 07 84</a></li>
+      <li>💬 <strong>WhatsApp :</strong> <a href="https://wa.me/33644120784" target="_blank" rel="noopener">Envoyer un message</a></li>
+      <li>📧 <strong>Email :</strong> <a href="mailto:contact@ouassvtc.fr">contact@ouassvtc.fr</a></li>
+      <li>📝 Ou via le <a href="index.html#formResa">formulaire de réservation</a> sur la page d’accueil</li>
+    </ul>
+
+    <h2>🚗 OuassVTC – votre VTC à Perpignan</h2>
+    <p>
+      Avec OuassVTC, chaque trajet est organisé pour être simple, clair et agréable.
+      Nous mettons l’accent sur la <strong>ponctualité</strong>, la <strong>courtoisie</strong>
+      et la <strong>sérénité</strong> de vos déplacements.
+    </p>
+    <p><strong>OuassVTC – votre VTC à Perpignan, disponible 24h/24 sur réservation.</strong></p>
   </main>
 
+  <footer>
+    © 2025 OuassVTC - Tous droits réservés.
+  </footer>
+
+  <!-- === Boutons fixes === -->
   <div class="floating-buttons">
-    <a href="index.html">🏠 Accueil</a>
-    <a href="tel:+33644120784">📞 Appeler</a>
-    <a href="contact.html">📅 Réserver</a>
+    <a href="index.html">⬅️ Accueil</a>
+    <a href="tel:0644120784">📞 Appeler</a>
+    <a href="index.html#formResa">📅 Réserver</a>
   </div>
 
-  <footer>© 2025 OuassVTC – VTC Perpignan et Pyrénées-Orientales.</footer>
 </body>
 </html>
