--- a/index.html
+++ b/index.html
@@ -231,15 +231,14 @@
       </div>
     </form>
 
-    <!-- SECTION MODIFIÉE AVEC VTC PERPIGNAN -->
-    <p style="text-align:center;font-size:13px;color:#666;margin-bottom:24px;">
-      Besoin d’en savoir plus ?
-      <a href="vtc-perpignan.html" style="font-weight:700;color:#000;">VTC Perpignan</a> ·
-      <a href="services.html">Voir nos services</a> ·
-      <a href="faq.html">Questions fréquentes</a> ·
-      <a href="qui-sommes-nous.html">Qui sommes-nous ?</a> ·
-      <a href="contact.html">Nous contacter</a>
-    </p>
+    <!-- SECTION MODIFIÉE : UN SEUL BOUTON VTC PERPIGNAN -->
+    <div style="text-align:center;margin:24px 0 24px;">
+      <a href="vtc-perpignan.html"
+         class="btn"
+         style="display:inline-flex;width:auto;min-width:0;padding:10px 28px;font-size:14px;">
+        VTC Perpignan
+      </a>
+    </div>
 
     <h3 style="font-size:16px;font-weight:700;text-align:center;margin-top:20px;margin-bottom:8px;color:#333">🗺️ Visualisez votre itinéraire ci-dessous</h3>
     <div id="map" role="region" aria-label="Carte de l'itinéraire"></div>
