--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     .btn-light{
       background:#fff;color:#111;border:1px solid var(--border);
       box-shadow:0 2px 6px rgba(0,0,0,.06);padding:10px 14px;
-      font-size:14px;border-radius:999px;display:inline-flex
+      font-size:14px;border-radius:999px;display:inline-flex;align-items:center;justify-content:center;gap:6px;
     }
     .fare-sticky{
       position:fixed;top:var(--navH);left:0;right:0;z-index:50;
@@ -231,17 +231,19 @@
       </div>
     </form>
 
-    <!-- SECTION MODIFIÉE : UN SEUL BOUTON VTC PERPIGNAN -->
-    <div style="text-align:center;margin:24px 0 24px;">
-      <a href="vtc-perpignan.html"
-         class="btn"
-         style="display:inline-flex;width:auto;min-width:0;padding:10px 28px;font-size:14px;">
-        VTC Perpignan
-      </a>
-    </div>
+    <!-- Ancienne section "Besoin d'en savoir plus ?" SUPPRIMÉE -->
 
     <h3 style="font-size:16px;font-weight:700;text-align:center;margin-top:20px;margin-bottom:8px;color:#333">🗺️ Visualisez votre itinéraire ci-dessous</h3>
     <div id="map" role="region" aria-label="Carte de l'itinéraire"></div>
+
+    <!-- NOUVEAU BOUTON COMPACT VTC PERPIGNAN SOUS LA CARTE (STYLE 4, POSITION C) -->
+    <div style="text-align:center;margin:16px 0 28px;">
+      <a href="vtc-perpignan.html"
+         class="btn-light"
+         style="padding:8px 18px;font-size:13px;border-color:#000;">
+        VTC Perpignan
+      </a>
+    </div>
 
     <section class="contact-section" style="text-align:center;margin-top:32px;color:#555;font-size:15px">
       <p>📞 <a href="tel:0644120784">06 44 12 07 84</a></p>
