--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <meta name="keywords" content="VTC Perpignan, Taxi Perpignan, chauffeur privé, Uber Perpignan, Bolt, Heetch, transport aéroport, gare, Saint-Estève, Canet, Argelès, Espagne">
 
   <!-- Icônes / couleur appli -->
-  <link rel="icon" href="ouassvtc.png" type="image/png">
-  <link rel="apple-touch-icon" href="ouassvtc.png">
+  <link rel="icon" href="Vtc-perpignan.png" type="image/png">
+  <link rel="apple-touch-icon" href="Vtc-perpignan.png">
   <link rel="manifest" href="/manifest.json">
   <meta name="theme-color" content="#000000">
 
