--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 </head>
 <body>
   <header>
-    <img src="ouassvtc.png" alt="OuassVTC" loading="eager">
+    <img src="vtc-perpignan" alt="vtc-perpignan" loading="eager">
   </header>
 
   <nav id="topnav">
