vtc-perpignan.html

--- a/vtc-perpignan.html
+++ b/vtc-perpignan.html
@@ -13,7 +13,7 @@
     "@context": "https://schema.org",
     "@type": "LocalBusiness",
     "name": "OuassVTC",
-    "image": "https://www.ouassvtc.fr/ouassvtc.png",
+    "image": "https://www.ouassvtc.fr/vtc-perpignan.png",
     "url": "https://www.ouassvtc.fr/vtc-perpignan.html",
     "telephone": "+33644120784",
     "email": "contact@ouassvtc.fr",
@@ -142,7 +142,7 @@
 <body>
 
   <header>
-    <img src="ouassvtc.png" alt="OuassVTC - Chauffeur VTC à Perpignan">
+    <img src="vtc-perpignan.png" alt="OuassVTC - Chauffeur VTC à Perpignan">
   </header>
 
   <main>
