--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
     "@type": "LocalBusiness",
     "name": "OuassVTC",
     "url": "https://www.ouassvtc.fr",
-    "image": "https://www.ouassvtc.fr/ouassvtc.png",
+    "image": "https://www.ouassvtc.fr/vtc-perpignan.png",
     "description": "Chauffeur VTC à Perpignan et dans les Pyrénées-Orientales. Transferts gares, aéroports, Espagne, déplacements professionnels.",
     "telephone": "+33644120784",
     "address": {
@@ -201,7 +201,7 @@
 <body>
 
   <header>
-    <img src="ouassvtc.png" alt="OuassVTC - VTC à Perpignan">
+    <img src="vtc-perpignan.png" alt="OuassVTC - VTC à Perpignan">
   </header>
 
   <main class="contact-container">
