--- a/faq.html
+++ b/faq.html
@@ -182,7 +182,7 @@
 <body>
 
   <header>
-    <img src="ouassvtc.png" alt="OuassVTC - VTC à Perpignan">
+    <img src="vtc-perpignan.png" alt="OuassVTC - VTC à Perpignan">
   </header>
 
   <main class="faq-container">
