qui-sommes-nous.html

--- a/qui-sommes-nous.html
+++ b/qui-sommes-nous.html
@@ -135,7 +135,7 @@
 <body>
 
   <header>
-    <img src="ouassvtc.png" alt="OuassVTC">
+    <img src="vtc-perpignan.png" alt="OuassVTC">
   </header>
 
   <main class="about-container">
