--- a/services.html
+++ b/services.html
@@ -134,7 +134,7 @@
 <body>
 
   <header>
-    <img src="ouassvtc.png" alt="OuassVTC - Chauffeur VTC à Perpignan">
+    <img src="vtc-perpignan.png" alt="OuassVTC - Chauffeur VTC à Perpignan">
   </header>
 
   <main>
