mentions-legales.html

--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -18,7 +18,7 @@
     "@context": "https://schema.org",
     "@type": "LocalBusiness",
     "name": "OuassVTC",
-    "image": "https://www.ouassvtc.fr/ouassvtc.png",
+    "image": "https://www.ouassvtc.fr/vtc-perpignan.png",
     "telephone": "+33644120784",
     "email": "contact@ouassvtc.fr",
     "url": "https://www.ouassvtc.fr",
@@ -56,7 +56,7 @@
 <body>
 
   <header>
-    <img src="ouassvtc.png" alt="Logo OuassVTC, chauffeur privé à Perpignan">
+    <img src="vtc-perpignan.png" alt="Logo OuassVTC, chauffeur privé à Perpignan">
   </header>
 
   <main>
